# telegram-bot-getid

./: .env  Cargo.toml  Dockerfile  README.md
src/: main.rs
