[package]
name = "telegram-bot-getid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
teloxide = { version = "0.12.2", features = ['full'] }
tokio = { version = "1.33.0", features = ['full'] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
